Update view tab when switching to it, fixes data scan widget showing in the wrong place

BUG: 259483